# xunji

./: .gitignore  CHANGELOG.md  Makefile  README.md  package-lock.json  package.json
.claude/skills/: A-提交代码.md
.cursor/: hooks.json
.cursor/commands/: release-pr-tag.md
.cursor/hooks/: pitfall-session-reminder.sh
.cursor/plans/: tauri_自动构建与更新_5a344555.plan.md  ui-sync-with-demo_7774ca21.plan.md  批量分析_ui_改进_4ff87c4f.plan.md
.cursor/rules/: develop-rules.mdc
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  uno.config.ts  vite-env.d.ts  vite.config.ts  xunji.updater.key.pub
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: config.rs  lib.rs  main.rs  path_local.rs
apps/desktop/src-tauri/src/collector/: claude_code.rs  codebuddy.rs  codebuddy_cli.rs  cursor.rs  mod.rs  normalizer.rs  scheduler.rs
apps/desktop/src-tauri/src/commands/: cards.rs  cli_probe.rs  config.rs  export.rs  mod.rs  sessions.rs  sidebar.rs  sync.rs
apps/desktop/src-tauri/src/sidecar/: mod.rs  rpc.rs
apps/desktop/src-tauri/src/storage/: cards.rs  db.rs  migrations.rs  mod.rs  models.rs  search.rs  sessions.rs
design/: ui_demo.html
docs/: CHANGELOG.md  CodeBuddy 会话记录提取逻辑.md  macOS 打包说明.md  开发说明-Tauri命令与前端.md  桌面应用-Release与自动更新.md
docs/PRD/: 寻迹（XunJi）产品需求文档 PRD.md
docs/plans/: 2026-03-20-v0.1-MVP实现计划.md  2026-03-20-寻迹整体架构设计.md  2026-03-22-v0.1.1-tasks.md  2026-03-22-v0.1.1-实现计划.md  2026-03-22-v0.1.2-tasks.md  2026-03-22-v0.2.0-tasks.md  2026-03-22-v0.2.0-实现计划.md
docs/specs/: v0.1-功能清单.md  导出-Markdown-约定.md
docs/数据库/: 寻迹 SQLite 数据模型.md
docs/踩坑/: Monorepo-混用包管理器.md  Naive-UI-Vue重复实例白屏.md  README.md  bun-run-vs-bun-bun-run.md  cli-llm-json-解析失败.md  tool-result-role-识别.md  工具结果-正则匹配失败.md  构建-UnoCSS-生产构建图标丢失.md  桌面应用-Cursor-workspace路径百分号编码.md  桌面应用-SQLite-FTS5-MATCH虚拟表名.md  桌面应用-Tailwind-ring与overflow-hidden裁切.md  桌面应用-会话提炼-JSON解析与标签技术栈.md  桌面应用-会话重同步覆盖analysis标题.md  桌面应用-提炼-CLI-路径与环境变量.md  (+2 more)
scripts/: sync-changelog.mjs
(+37 files in other folders)
