[package]
name = "xunji-desktop"
version = "0.1.0"
description = "寻迹 - AI 编程知识管理平台"
authors = ["XunJi"]
edition = "2021"

[lib]
name = "xunji_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5"
walkdir = "2"
md5 = "0.7"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
